--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 beautifulsoup4==4.10.0
 community==1.0.0b1
-dhlab==2.0.19
-ipython==8.1.1
+dhlab==2.0.20
+#ipython==8.1.1
 matplotlib==3.4.3
 networkx==2.6.3
 numpy==1.20.3
@@ -11,4 +11,4 @@ python_louvain==0.16
 requests==2.26.0
 seaborn==0.11.2
 streamlit==1.7.0
-wordcloud==1.8.1
+#wordcloud==1.8.1
